# backend-services-user-migration

./: README.md  definitions.json  docker-compose.yml  pyproject.toml  rabbitmq.conf
app/: __init__.py  __main__.py
app/ping/: views.py
app/user_migration/consumer/: TransferCitizenConfirmConsumer.py  TransferCitizenConsumer.py
app/user_migration/controller/: __init__.py  views.py
app/user_migration/processors/: TransferCitizenConfirmConsumerProcessor.py  TransferCitizenConfirmPublisherProcessor.py  TransferCitizenConsumerProcessor.py  TransferCitizenPublisherProcessor.py
app/user_migration/services/: CentralizerService.py  DocumentService.py  NotificationService.py  OperatorService.py  QueueService.py  UserService.py
