[tool.poetry]
name = "usermigrationservice"
version = "0.1.0"
description = ""
authors = ["Juanda0 <juanda20202@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
requests = "^2.32.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
